<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginBottom="20dp"
        android:height="45dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/register_student"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:accessibilityHeading="true"
        android:background="@color/head"
        android:orientation="vertical"
        tools:targetApi="p">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/student_name"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/walter_white"
            android:inputType="text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/student_id"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edtID"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/it_xxxxxxxx"
            android:inputType="text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/number"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edtNum"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/_07x_xxx_xxxx"
            android:inputType="phone"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/gblue"
        android:text="@string/register"
        android:textSize="20sp" />

</LinearLayout>