<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".ListFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginBottom="20dp"
        android:height="45dp"
        android:gravity="center"
        android:text="@string/heading"
        android:textSize="48sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/subHead"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="left|center_vertical"
            android:text="@string/nameHead"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="left|center_vertical"
            android:text="@string/idhead"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="left|center_vertical"
            android:text="@string/numHead"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStudentList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>